# IAME_Election_Backend

./: .env  .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  docker-compose.yml  flake.nix  rust-toolchain
migrations/2019-06-24-104818_schools/: down.sql  up.sql
migrations/2019-06-24-105145_school_class/: down.sql  up.sql
migrations/2019-06-24-105327_election/: down.sql  up.sql
migrations/2019-06-24-105859_candidate/: down.sql  up.sql
migrations/2019-06-24-110123_vote/: down.sql  up.sql
migrations/2019-06-24-110438_voted/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
