[package]
name = "IAME_Election_Backend_Rocket"
version = "0.1.0"
authors = ["Farzeen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", default-features = false, features = ["diesel_postgres_pool","json"] }
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
jsonwebtoken = "8.1.1"
diesel_migrations = "1.4.0"
